--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Grid custom color scheme */
+/* CSS custom color scheme */
 :root {
   --primary-color: #2a30a5;
   --secondary-color: #00f2ff7a;
