--- a/style.css
+++ b/style.css
@@ -425,6 +425,13 @@ i {
   background: rgba(255, 255, 255, 0.603);
 }
 
+.team-card p{
+  padding-left: 5%; 
+  padding-right: 5%; 
+  text-align: justify; 
+  text-justify: inter-word;
+}
+
 #portrait{
   width: 60%;
   border-radius: 50%;
