--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* CSS custom color scheme */
 :root {
-  --primary-color: #2a30a5;
+  --primary-color: #1452aa;
   --secondary-color: #dcf4fb;
   --primary-text-color: #ffffff;
   --secondary-text-color: #4697ff;
@@ -412,8 +412,6 @@ i {
   }
 }
 
-
-
 /*--------------------------------------------------------------
 # About page
 --------------------------------------------------------------*/
@@ -433,9 +431,20 @@ i {
   font-size: 30px;
 }
 
+@media (max-width: 650px) {
+  #about {
+    width: 90%;
+    margin-left: 5%;
+  }
+}
+
 /*--------------------------------------------------------------
 # Technology
 --------------------------------------------------------------*/
+#technology {
+  margin-bottom: 80px;
+}
+
 #technology img {
   width: 20%;
   margin-left: auto;
@@ -453,6 +462,13 @@ i {
   border: solid;
   padding: 10px;
   margin-top: 5vh;
+}
+
+@media (max-width: 650px) {
+  #technology {
+    width: 90%;
+    margin-left: 5%;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -507,16 +523,20 @@ i {
 --------------------------------------------------------------*/
 #team video{
   position: absolute;
-  height: 140vh;
   width: 100%;
   overflow: hidden;
   object-fit: fill;
+  height: 300vh;
 }
 
 #team-content{
-  margin-top: 50px;
+  margin-top: 60px;
   background: rgba(255, 255, 255, 0.603);
   padding: 15px; 
+}
+
+#team-content a{
+  align-content: center;
 }
 
 .team-card p{
@@ -524,10 +544,11 @@ i {
   padding-right: 5%; 
   text-align: justify; 
   text-justify: inter-word;
+  font-size: 18px;
 }
 
 #portrait{
-  width: 60%;
+  width: 40%;
   border-radius: 50%;
   margin-right: auto;
   margin-left: auto;
@@ -543,10 +564,6 @@ i {
   #bottom-portraits {
     margin-left: 19.33%;
     overflow: hidden;
-  }
-
-  #bottom-portrait img {
-    width: 100%;
   }
 }
 
