--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+@media (min-width: 650px) {
+.row {
+  display: flex;
+}
+}
+
 .container {
   position: relative;
   width: 100%;
@@ -47,7 +53,8 @@
   .three.columns                  { width: 22%;            }
   .four.columns                   { width: 30.6666666667%; }
   .five.columns                   { width: 39.3333333333%; }
-  .six.columns                    { width: 48%;            }
+  .six.columns                    { width: 48%;            
+                                    flex: 1;}
   .seven.columns                  { width: 56.6666666667%; }
   .eight.columns                  { width: 65.3333333333%; }
   .nine.columns                   { width: 74.0%;          }
@@ -422,7 +429,7 @@ i {
   border: 2px;
   background: var(--third-color);
   border-radius: 5px;
-  margin-top: 10px;
+  margin-top: 50px;
 }
 
 #about-title{
@@ -494,7 +501,7 @@ i {
 }
 
 #game p{
-  font-size: 3vh;
+  font-size: 1.5vw;
   position: absolute;
   text-align: justify;
   top: 60%;
@@ -508,15 +515,16 @@ i {
   margin-bottom: 20vh;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 650px) {
   #cloud {
     height: 400px;
-    left: 0;
+    width: 100vw;
   }
+
   #game p{
     font-size: 13px;
     width: 75%;
-    margin-top: 11%;
+    margin-top: 13%;
   }
 }
 
