--- a/style.css
+++ b/style.css
@@ -702,33 +702,48 @@ i {
   text-align: center;
 }
 
+#bottom-text {
+  text-align: justify;
+  margin-left: 22.5%;
+  width: 45%;
+}
+
 #mail_pic {
   width:35px; 
   height:35px; 
 }
 
-@media (min-width: 650px) {
-  #bottom-portraits {
-    margin-left: 19.33%;
-    overflow: hidden;
-  }
-}
-
 @media (max-width: 650px) {
   #team video{
     position: absolute;
-    height: 350vh;
+    height: 1050vw;
     width: 100%;
     overflow: hidden;
     object-fit: fill;
   }
 
+  #bottom-text {
+    width: 80%;
+    margin-left: 5%;
+  }
+}
+
   @media (max-width: 400px) {
     #team video{
       position: absolute;
-      height: 700vh;
+      height: 1100vw;
       width: 100%;
       overflow: hidden;
       object-fit: fill;
     }
+}
+
+@media (max-width: 350px) {
+  #team video{
+    position: absolute;
+    height: 1460vw;
+    width: 100%;
+    overflow: hidden;
+    object-fit: fill;
+  }
 }
