--- a/style.css
+++ b/style.css
@@ -537,11 +537,11 @@ i {
 /*--------------------------------------------------------------
 # Image gallery
 --------------------------------------------------------------*/
-#image-gallery img:hover {
+.ig-img:hover {
   opacity: 0.7;
 }
 
-#image-gallery img {
+.ig-img {
   width: 100%;
   height: auto;
   margin-left: auto;
@@ -592,7 +592,7 @@ i {
   top: 65px;
   right: 35px;
   color: #f1f1f1;
-  font-size: 40px;
+  font-size: 55px;
   font-weight: bold;
   transition: 0.3s;
 }
@@ -638,6 +638,11 @@ i {
 @media only screen and (max-width: 700px){
   .modal-content {
     width: 100%;
+  }
+
+  .close {
+    top: 90px;
+    right: 15px;
   }
 }
 
